WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125064
Fix EFL build with INSPECTOR disabled
https://bugs.webkit.org/show_bug.cgi?id=125064
Summary
Fix EFL build with INSPECTOR disabled
Peter Molnar
Reported
2013-12-02 00:53:42 PST
EFL build currently fails when INSPECTOR is turned off.
Attachments
Patch
(3.06 KB, patch)
2013-12-02 00:55 PST
,
Peter Molnar
ossy
: review-
ossy
: commit-queue-
Details
Formatted Diff
Diff
updated patch
(9.09 KB, patch)
2014-02-06 06:17 PST
,
Peter Molnar
no flags
Details
Formatted Diff
Diff
updated patch
(7.87 KB, patch)
2014-02-10 01:30 PST
,
Peter Molnar
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Peter Molnar
Comment 1
2013-12-02 00:55:49 PST
Created
attachment 218149
[details]
Patch
Gyuyoung Kim
Comment 2
2013-12-02 01:01:02 PST
Comment on
attachment 218149
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=218149&action=review
> Source/WebKit/efl/ewk/ewk_contextmenu.h:112 > +#if defined(ENABLE_INSPECTOR) && ENABLE_INSPECTOR
I think this isn't meaningful. ewk_contentmenu.h is public header. When application includes this, they can't know ENABLE_INSPECTOR is enabled or not.
Peter Molnar
Comment 3
2013-12-02 02:43:16 PST
(In reply to
comment #2
)
> (From update of
attachment 218149
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=218149&action=review
> > > Source/WebKit/efl/ewk/ewk_contextmenu.h:112 > > +#if defined(ENABLE_INSPECTOR) && ENABLE_INSPECTOR > > I think this isn't meaningful. ewk_contentmenu.h is public header. When application includes this, they can't know ENABLE_INSPECTOR is enabled or not.
This context menu item is correctly guarded in ContextMenuItem.h:134, but not here. These two must be in sync, as stated at the beginning of this file. They are not in sync now, that causes a lot of enum assertions, therefore WebKit currenty doesn't build.
Gyuyoung Kim
Comment 4
2013-12-02 04:17:43 PST
Comment on
attachment 218149
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=218149&action=review
>>> Source/WebKit/efl/ewk/ewk_contextmenu.h:112 >>> +#if defined(ENABLE_INSPECTOR) && ENABLE_INSPECTOR >> >> I think this isn't meaningful. ewk_contentmenu.h is public header. When application includes this, they can't know ENABLE_INSPECTOR is enabled or not. > > This context menu item is correctly guarded in ContextMenuItem.h:134, but not here. These two must be in sync, as stated at the beginning of this file. > > They are not in sync now, that causes a lot of enum assertions, therefore WebKit currenty doesn't build.
This file will be included by EFL application. If EFL application doesn't define ENABLE_INSPECTOR, it can't use EWK_CONTEXT_MENU_ITEM_TAG_INSPECT_ELEMENT when INSPECTOR is enabled. Now you only think when INSPECTOR is disabled.
Michal Pakula vel Rutka
Comment 5
2013-12-02 05:52:25 PST
Maybe we should remove context menu's COMPILE_ASSERT_MATCHING_ENUM, and replace it with methods similar to those used in WK API:
https://trac.webkit.org/browser/trunk/Source/WebKit2/Shared/API/c/WKSharedAPICast.h#L328
and
https://trac.webkit.org/browser/trunk/Source/WebKit2/Shared/API/c/WKSharedAPICast.h#L522
Csaba Osztrogonác
Comment 6
2014-01-30 04:46:39 PST
(In reply to
comment #5
)
> Maybe we should remove context menu's COMPILE_ASSERT_MATCHING_ENUM, and replace it with methods similar to those used in WK API:
https://trac.webkit.org/browser/trunk/Source/WebKit2/Shared/API/c/WKSharedAPICast.h#L328
and
https://trac.webkit.org/browser/trunk/Source/WebKit2/Shared/API/c/WKSharedAPICast.h#L522
This one was done by
https://trac.webkit.org/changeset/163033
Csaba Osztrogonác
Comment 7
2014-01-30 04:48:53 PST
Comment on
attachment 218149
[details]
Patch r- now, because COMPILE_ASSERT_MATCHING_ENUM was already removed. Péter, could you update the patch and check if we need additional fixes too to make !INSPECTOR build happy?
Peter Molnar
Comment 8
2014-02-06 06:17:18 PST
Created
attachment 223329
[details]
updated patch
Gyuyoung Kim
Comment 9
2014-02-06 18:03:59 PST
Comment on
attachment 223329
[details]
updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223329&action=review
> Source/WebCore/inspector/ScriptCallFrame.cpp:38 > #include <inspector/InspectorValues.h>
Isn't it also more clear to contain this inclusion by ENABLE(INSPECTOR) ?
> Source/WebCore/inspector/ScriptCallStack.cpp:38 > #include <inspector/InspectorValues.h>
ditto.
Peter Molnar
Comment 10
2014-02-10 01:30:00 PST
Created
attachment 223684
[details]
updated patch
Csaba Osztrogonác
Comment 11
2014-02-10 01:38:57 PST
Comment on
attachment 223329
[details]
updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223329&action=review
>> Source/WebCore/inspector/ScriptCallFrame.cpp:38 >> #include <inspector/InspectorValues.h> > > Isn't it also more clear to contain this inclusion by ENABLE(INSPECTOR) ?
Are you sure if it is good? As far as I remember InspectorValues.h doesn't have ENABLE(INSPECTOR) guard intentionally, because it is used on many places regardless of enabled/disabled inspector.
Gyuyoung Kim
Comment 12
2014-02-10 02:11:22 PST
Comment on
attachment 223329
[details]
updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223329&action=review
>>> Source/WebCore/inspector/ScriptCallFrame.cpp:38 >>> #include <inspector/InspectorValues.h> >> >> Isn't it also more clear to contain this inclusion by ENABLE(INSPECTOR) ? > > Are you sure if it is good? As far as I remember InspectorValues.h > doesn't have ENABLE(INSPECTOR) guard intentionally, because it > is used on many places regardless of enabled/disabled inspector.
Ah, right. InspectorValues.h is being used by many places regardless of enabled/disabled inspector. I only saw where it is used on ENABLE(INSPECTOR) guard. Sorry for noise.
Gyuyoung Kim
Comment 13
2014-02-10 02:12:21 PST
Peter, could you request review with previous patch ?
Peter Molnar
Comment 14
2014-02-10 02:19:51 PST
(In reply to
comment #13
)
> Peter, could you request review with previous patch ?
The previous patch wouldn't apply because ScriptCallFrame.cpp and ScriptCallStack.cpp have been renamed since I uploaded that patch. Also, there were other changes since that, so, that patch doesn't even build now. The most recent patch builds on the current ToT, so I think it is the one that should be reviewed.
Gyuyoung Kim
Comment 15
2014-02-10 02:26:26 PST
Comment on
attachment 223684
[details]
updated patch LGTM. Ossy ?
Csaba Osztrogonác
Comment 16
2014-02-10 03:05:42 PST
Comment on
attachment 223684
[details]
updated patch LGTM, r=me
WebKit Commit Bot
Comment 17
2014-02-10 03:36:11 PST
Comment on
attachment 223684
[details]
updated patch Clearing flags on attachment: 223684 Committed
r163777
: <
http://trac.webkit.org/changeset/163777
>
WebKit Commit Bot
Comment 18
2014-02-10 03:36:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug