Fix EFL build with INSPECTOR disabled https://bugs.webkit.org/show_bug.cgi?id=125064

Patch by Peter Molnar <pmolnar.u-szeged@partner.samsung.com> on 2014-02-10
Reviewed by Csaba Osztrogonác.

Source/JavaScriptCore:

* inspector/InjectedScriptManager.h:
* inspector/ScriptDebugServer.cpp:
* inspector/agents/InspectorAgent.h:
* inspector/scripts/CodeGeneratorInspectorStrings.py:
(Inspector):

Source/WebCore:

* bindings/js/PageScriptDebugServer.cpp:
* bindings/js/PageScriptDebugServer.h:
* bindings/js/WorkerScriptDebugServer.cpp:
* bindings/js/WorkerScriptDebugServer.h:
* inspector/PageInjectedScriptManager.h:

Canonical link: https://commits.webkit.org/146539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163777 268f45cc-cd09-0410-ab3c-d52691b4dbfc