Source/JavaScriptCore/inspector/ScriptDebugServer.cpp
@@ -31,6 +31,8 @@
 #include "config.h"
 #include "ScriptDebugServer.h"
 
+#if ENABLE(INSPECTOR)
+
 #include "DebuggerCallFrame.h"
 #include "JSJavaScriptCallFrame.h"
 #include "JSLock.h"
@@ -336,3 +338,5 @@ const Vector<ScriptBreakpointAction>& ScriptDebugServer::getActionsForBreakpoint
 }
 
 } // namespace Inspector
+
+#endif // ENABLE(INSPECTOR)
